# PipCppTemp

./: .gitattributes  .gitignore  CHANGELOG  LICENSE  MANIFEST.in  README.md  install.bash  pyproject.toml  setup.py
example/: example.py
pipcpptemp_src/: Function.py  __init__.py
pipcpptemp_src/ext/: main.cpp
